...
                    : '-'}
              </BlueText>
            </View>
          </KeyboardAvoidingView>
          <BlueCard>
            <View>
              <BlueButton testID="ScanLndInvoiceNext" title={loc.lnd.next} onPress={next} />
            </View>
          </BlueCard>
        </ScrollView>
      </View>
      <BlueDismissKeyboardInputAccessory />
    </SafeBlueArea>
...
