...
            <QRCodeComponent value={bip21encoded} />
            <BlueCopyTextToClipboard text={isCustom ? bip21encoded : address} textStyle={styles.copyText} />
          </View>
          <View style={styles.share}>
            <View style={[styles.customAmount, stylesHook.customAmount]}>
              <TextInput
                testID="ReceiveAmountInput"
                placeholderTextColor="#81868e"
                placeholder="Amount (optional)"
                style={[styles.customAmountText, stylesHook.customAmountText]}
                inputAccessoryViewID={BlueDismissKeyboardInputAccessory.InputAccessoryViewID}
                {...inputProps}
              />
...
                onChangeText={setCustomLabel}
                placeholderTextColor="#81868e"
                placeholder={`${loc.receive.details_label} (optional)`}
                value={customLabel || ''}
                numberOfLines={1}
                style={[styles.customAmountText, stylesHook.customAmountText]}
                testID="CustomAmountDescription"
                inputAccessoryViewID={BlueDismissKeyboardInputAccessory.InputAccessoryViewID}
              />
            </View>
            <BlueCard>
              <BlueButton onPress={handleShareButtonPressed} title={loc.receive.details_share} />
            </BlueCard>
...
