...
    const onChainWallet = wallets[0];
    tmpWallets.push({
      wallet: onChainWallet,
      title: 'Bitcoin',
      isActivated: true,
      subtitle: loc.wallets.main_wallet_label,
      testID: 'OnChainWalletRow',
      walletID: onChainWallet?.getID?.(),
    });

    tmpWallets.push({
      wallet: lnWallet,
      title: 'Bitcoin',
...
          </TouchableOpacity>
        ))}
      </View>
      <FContainer ref={walletActionButtonsRef}>
        {wallet?.allowReceive() && (
          <FButton
            testID="ReceiveButton"
            text={loc.receive.header}
            onPress={onReceiveButtonPressed}
            icon={
              <View style={styles.receiveIcon}>
                <Icon name="arrow-down" size={buttonFontSize} type="font-awesome" color={colors.buttonAlternativeTextColor} />
              </View>
...
