...
          style={styles.actionButton}
          onPress={openImagePicker}
          icon={{ name: 'image', type: 'material', color: '#ffffff', size: 38 }}
        />
        <BlueButton
          style={styles.actionButton}
          testID="ImportFromTextButton"
          onPress={() => delayedNavigationFunction(() => replace('ImportWallet'))}
          icon={{ name: 'keyboard', type: 'material', color: '#ffffff', size: 38 }}
        />
      </View>
    </View>
  );
};
...
