...

      <BlueSpacing20 />
      <View style={styles.center}>
        <BlueButton
          disabled={importText.trim().length === 0}
          title={loc.wallets.import_do_import}
          testID="DoImport"
          onPress={importButtonPressed}
        />
        <BlueSpacing20 />
      </View>
    </>
  );
...
        </TouchableWithoutFeedback>
        <BlueSpacing20 />
        <BlueFormMultiInput
          value={importText}
          onBlur={onBlur}
          onChangeText={setImportText}
          testID="MnemonicInput"
          inputAccessoryViewID={BlueDoneAndDismissKeyboardInputAccessory.InputAccessoryViewID}
        />
      </View>
      <View>
        {Platform.select({ android: !isToolbarVisibleForAndroid && renderOptionsAndImportButton, default: renderOptionsAndImportButton })}
        {Platform.select({
...
